--- a/TooltipBubble/build.gradle
+++ b/TooltipBubble/build.gradle
@@ -3,14 +3,14 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-android-extensions'
 }
-
+apply plugin: 'com.github.dcendents.android-maven'
+group='com.github.allybros'
 android {
-    compileSdkVersion 31
-    buildToolsVersion "30.0.3"
+    compileSdkVersion 26
 
     defaultConfig {
         minSdkVersion 21
-        targetSdkVersion 31
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
 
